--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.19.0",
     "react-scripts": "4.0.3",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -46,6 +49,10 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^8.1.0",
+    "@testing-library/react-hooks": "^7.0.1",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.4",
+    "@types/react-window-infinite-loader": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.30.0",
